Ejercicios/Modulo12/GatewayAPI/yaml/03-httproute-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aquila-public-route
  namespace: aquila
spec:
  parentRefs:
    - name: aquila-gateway
  hostnames:
    - aquila.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api-v1-service
          port: 80
          weight: 90
        - name: api-v2-service
          port: 80
          weight: 10
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portal-service
          port: 80
