Ejercicios/Modulo12/GatewayAPI/yaml/06-httproute-audit-fixed.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aquila-audit-route
  namespace: aquila
spec:
  parentRefs:
    - name: aquila-gateway
  hostnames:
    - audit.aquila.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: audit-service
          port: 80
